актуализировали схему БД и классы, декомпозировали большие страшные методы, добавили немного уведомлений WebSocket, добавили подсчёт результатов игры (очки и места игроков) Вот бы ничего не сломалось...